force-app/main/default/objects/SBQQ__ColumnMetadata__c/fields/SBQQ__ColumnValidation__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ColumnValidation__c</fullName>
        <label>Column Validation</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>