force-app/main/default/objects/SBQQ__ColumnMetadata__c/fields/SBQQ__FieldColumnSize__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__FieldColumnSize__c</fullName>
        <description>The column size for the field</description>
        <inlineHelpText>Column Size for corresponding field. Default 150px.</inlineHelpText>
        <label>Field Column Size</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>